fixed order inputs beign stretched when obs was too big

--- a/src/app/routes/order/order.component.scss
+++ b/src/app/routes/order/order.component.scss
@@ -17,9 +17,12 @@
 }
 
 .info__container {
-  width: 100%;
   display: flex;
   gap: 1rem;
+}
+
+.input__container {
+  width: 100%;
 }
 
 .info__field,
